# colosseum

./: .gitignore  CONTEXT.md  QUICKSTART.md  README.md  pyproject.toml
colosseum/: __init__.py  agent_registry.py  agent_supervisor.py  cli.py  config.py  database.py  k8s_deploy.py  quadlet_deploy.py  requirements.txt
colosseum/agents/: __init__.py  curator_agent.py
colosseum/cli/: __init__.py  curator.py
colosseum/data_sources/: __init__.py  s3_parquet.py
colosseum/database/: __init__.py  client.py
colosseum/mcp/: __init__.py  base.py  dastrader.py  etrade.py  fetch.py  ib.py  loader.py
deployment/: README.md
deployment/docker/: .dockerignore  Containerfile  Containerfile.bootc  Dockerfile  build.sh
deployment/kubernetes/: curator-deployment.yaml  deploy.sh  kustomization.yaml  namespace.yaml  postgres-statefulset.yaml  secrets.yaml
deployment/systemd/: colosseum-backup.service  colosseum-backup.timer  colosseum-curator.service  colosseum-curator.target  colosseum-curator@.service  install.sh
docs/: CURATOR_AGENT.md  DEPLOYMENT.md  S3_PARQUET_INTEGRATION.md
examples/: README.md  __init__.py  config.yaml  curator_example.py  mcp.json
examples/agents/: README.md  multi_agent.py  simple_agent.py
quadlets/: Dockerfile.postgres  README-ENHANCED.md  README.md  build-postgres-image.sh  cleanup.sh  colosseum-agent.container  colosseum-curator.container  colosseum-db.container  colosseum-db.volume  colosseum-network.network  colosseum-postgres-data.volume  colosseum-postgres.container  colosseum-postgres.container.new  colosseum-state.volume  config-s3.yaml.example  config.yaml.example  deploy-enhanced.sh  deploy.sh  init-db.sql  init-schema.sh  postgresql.conf
